--- a/FutureValueCalculator/Views/Home/Index.cshtml
+++ b/FutureValueCalculator/Views/Home/Index.cshtml
@@ -1,8 +1,19 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿
+@{
+    Layout = null;
 }
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width"/>
+    <title>Home Page</title>
+</head>
+<body>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <h1>Future value Calculator</h1>
+    <p>Customer Name: @ViewBag.Name</p>
+    <p>Future Value: @ViewBag.FV.ToString("C2")</p>
+
+</body>
+</html>
+
