--- a/FutureValueCalculator/wwwroot/css/site.css
+++ b/FutureValueCalculator/wwwroot/css/site.css
@@ -1,18 +1,25 @@
-html {
-  font-size: 14px;
+﻿body {
+    padding: 1em;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+h1 {
+    margin-top: 0;
+    color: navy;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+label {
+    display: inline-block;
+    width: 10em;
+    padding-right: 1em;
 }
 
-body {
-  margin-bottom: 60px;
+div {
+    margin-bottom: .5em;
+}
+
+footer {
+    text-align: center;
+    padding-top: 1em;
+    font-size: 80%;
 }
