--- a/FutureValueCalculator/Views/Home/Index.cshtml
+++ b/FutureValueCalculator/Views/Home/Index.cshtml
@@ -2,25 +2,59 @@
 @{
     ViewData["Title"] = "Future Value Calculator";
 }
-<h1>Future Value Calculator</h1>
-<form asp-action="Index" method="post">
-    <div asp-validation-summary="All"></div>
-    <div>
-        <label asp-for="MonthlyInvestment">Monthly Investment:</label>
-        <input asp-for="MonthlyInvestment" />
+<div class="container">
+    <div class="alert alert-info alert-dismissible col-md-6">
+        This sites use cookies!
+        <a href="#" class="alert-link">View Cookie Policy</a>
+        <button class="btn-close" data-bs-dismiss="alert"></button>
     </div>
-    <div>
-        <label asp-for="YearlyInterestRate">Yearly Interest Rate:</label>
-        <input asp-for="YearlyInterestRate" />
-    </div>
-    <div>
-        <label asp-for="Years">Number of Years:</label>
-        <input asp-for="Years" />
-    </div>
-    <div>
-        <label>Future Value:</label>
-        <input value="@ViewBag.FV.ToString("C2")" readonly>
-    </div>
-    <button type="submit">Calculate</button>
-    <a asp-action="Index">Clear</a>
-</form>
+    <h1 class="mt-3 mb-4">@ViewBag.Title</h1>
+    <form asp-action="Index" method="post">
+        <div class="row">
+            <label asp-for="MonthlyInvestment" class="col-md-3 form-label">
+                Monthly Investment:
+            </label>
+            <div class="col-md-3">
+                <input asp-for="MonthlyInvestment" class="form-control" />
+            </div>
+            <span asp-validation-for="MonthlyInvestment"
+                  class="col text-danger"></span>
+        </div>
+        <div class="row">
+            <label asp-for="YearlyInterestRate" class="col-md-3 form-label">
+                Yearly Interest Rate:
+            </label>
+            <div class="col-md-3">
+                <input asp-for="YearlyInterestRate" class="form-control" />
+            </div>
+            <span asp-validation-for="YearlyInterestRate"
+                  class="col text-danger"></span>
+        </div>
+        <div class="row">
+            <label asp-for="Years" class="col-md-3 form-label">
+                Number of Years:
+            </label>
+            <div class="col-md-3">
+                <input asp-for="Years" class="form-control" />
+            </div>
+            <span asp-validation-for="Years"
+                  class="col text-danger"></span>
+        </div>
+        <div class="row">
+            <label class="col-md-3 form-label">Future Value:</label>
+            <div class="col-md-3">
+                <input value="@ViewBag.FV.ToString("c2")" readonly
+                       class="form-control" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col offset-md-3">
+                <button type="submit" class="btn btn-primary">
+                    Calculate
+                </button>
+                <a asp-action="Index"
+                   class="btn btn-outline-secondary">Clear</a>
+            </div>
+        </div>
+    </form>
+</div>
